Fix wrap with hljs

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -7,3 +7,8 @@ body,
 p {
 	font-family: 'Montserrat', sans-serif;
 }
+
+pre,
+code {
+	@apply whitespace-pre-wrap;
+}
